<resources>
    <string name="app_name" translatable="false">The Day Ahead</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_description">Managing school life has never been easier…</string>

    <!--Deadline notifications, virtual homework diaryEntry, dynamic timetable. The Day Ahead app
        combines these 3 technologies together in mutual dependence. Furthermore, The Day Ahead app
        also implements useful integration of schoology.com and a kamar portal (for sancta maria
        college only) to reduce the frequency of having to switch between different software where
        each spectrum works together in order to bring to you an effective school management app.-->

    <string name="nav_share_title">Show The Day Ahead app to your friends!</string>
    <string name="title_activity_timetable">TimetableActivity</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sancta_maria_college_logo_content_description">Sancta Maria College Logo</string>
    <string name="remember_me">Remember me</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="save_and_set_date_and_time">Save and set date and time</string>
    <string name="bf">BF</string>
    <string name="hr">HR</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="i">I</string>
    <string name="p3">P3</string>
    <string name="p4">P4</string>
    <string name="l">L</string>
    <string name="p5">P5</string>
    <string name="as">AS</string>
    <string name="_12_00am">12:00am</string>
    <string name="_8_40am">8:40am</string>
    <string name="_9_00am">9:00am</string>
    <string name="_10_00am">10:00am</string>
    <string name="_11_00am">11:00am</string>
    <string name="_11_25am">11:25am</string>
    <string name="_12_25pm">12:25pm</string>
    <string name="_1_25pm">1:25pm</string>
    <string name="_2_15pm">2:15pm</string>
    <string name="_3_15pm">3:15pm</string>
    <string name="hint_editText_diary">Type here.</string>
</resources>
